@@ -1,4 +1,4 @@
-KAppTemplate v0.6.2
+KAppTemplate v0.6.3
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
