@@ -11,7 +11,7 @@ else
 	ECHO="echo -e";
 fi
 
-$ECHO "KAppTemplate v0.6.2 Install (C) 2000 Kurt Granroth <granroth@kde.org>";
+$ECHO "KAppTemplate v0.6.3 Install (C) 2000 Kurt Granroth <granroth@kde.org>";
 $ECHO;
 
 # let's see if we have a previous release
